--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "browserify index.js -t babelify -p tinyify > bundle.js",
+    "start": "budo index.js:bundle.js --live --open -- -t babelify",
     "watch": "watchify index.js -t babelify -p tinyify -o bundle.js"
   },
   "repository": {
@@ -22,6 +23,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.0",
     "budo": "^11.2.0",
