--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "redux": "^4.0.0",
     "tinyify": "^2.4.0",
     "watchify": "^3.11.0"
+  },
+  "dependencies": {
+    "redux-form": "^7.3.0"
   }
 }
